error in average and median fixed